Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1655,6 +1655,7 @@
     "wizard-plugins": "Un plugin és un complement que afegeix noves funcionalitats. Selecciona els plugins que vulguis activar immediatament, o fes-ho més tard des del panell de control.",
     "work-events": "Esdeveniments de treball",
     "working-hours": "Horari de treball",
+    "works": "Feines",
     "write-a-message-here": "Escriu un missatge aquí",
     "x-column": "Columna X",
     "x-operation": "Operació sobre X",
