--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -898,8 +898,8 @@
     "login-ok": "Melden Sie sich erfolgreich an (Cookie). Benutzer: '0'",
     "login-password-fail": "Anmeldung fehlgeschlagen",
     "login-text": "Anmeldung",
-    "login-to-continue": "login-to-continue",
-    "login-to-continue-p": "Necesita identificarse para continuar con esta acción. Haga clic en iniciar sesión o cree una cuenta.",
+    "login-to-continue": "Melden Sie sich an, um fortzufahren",
+    "login-to-continue-p": "Um fortzufahren, müssen Sie sich identifizieren. Klicken Sie auf Anmelden oder erstellen Sie ein Konto.",
     "login-user-not-found": "Benutzer nicht gefunden",
     "logo": "Logotyp",
     "logout": "Ausloggen",
@@ -1022,7 +1022,7 @@
     "no-reference": "Keine Referenz",
     "no-selected-item": "no-selected-item",
     "no-stock": "Kein Bestand",
-    "non-editable-accounting-entry": "non-editable-accounting-entry",
+    "non-editable-accounting-entry": "Nicht bearbeitbarer Buchungseintrag",
     "non-editable-columns": "non-editable-columns",
     "non-editable-document": "Non editable document",
     "none": "Keine",
@@ -1266,11 +1266,11 @@
     "register-symbol": "#",
     "registered-installation": "Instalation registriert #%number%",
     "registered-installation-p": "Diese Installation wurde bereits registriert. Wenn Sie Zahlungspflichtige Plugins haben, klicken Sie auf die Schaltfläche Verwalten, um sie zu verknüpfen und aktualisieren zu können.",
-    "regularization-operation": "Regularización",
+    "regularization-operation": "Regulierungsvorgang",
     "reject": "Ablehnen",
     "rejected": "abgelehnt",
     "related": "verbunden",
-    "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
+    "related-subaccount-bank-charges": "Zugehöriges Unterkonto für Bankgebühren (Provisionen, etc.)",
     "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
     "reloading": "Neuladen",
     "remove-filter": "Filter löschen",
@@ -1345,7 +1345,7 @@
     "send-location": "Enviar ubicación",
     "send-mail": "Send mail",
     "send-mail-error": "Fehler beim Senden der E-Mail",
-    "send-mail-ok": "send-mail-ok",
+    "send-mail-ok": "E-Mail erfolgreich gesendet",
     "send-videos": "Videos senden",
     "sent-a-audio": "h",
     "sent-a-document": "Envió un documento",
@@ -1443,7 +1443,7 @@
     "subaccount-pyg-not-found": "Teil-Konto für Gewinn- und Verlustrechnung nicht gefunden",
     "subaccount-sales": "Cuenta de ventas",
     "subaccounts": "Unterkonten",
-    "subfamilies": "subfamilies",
+    "subfamilies": "Subfamilien",
     "subject": "Betreff",
     "subtotal": "Zwischensumme",
     "subtract": "Subtract",
@@ -1655,6 +1655,7 @@
     "wizard-plugins": "Ein Plugin ist eine Ergänzung, die neue Funktionalitäten hinzufügt. Wählen Sie die Plugins aus, die Sie sofort aktivieren möchten, oder tun Sie dies später über die Systemsteuerung.",
     "work-events": "Eventos de trabajo",
     "working-hours": "Arbeitszeit",
+    "works": "Trabajos",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "Spalte X",
     "x-operation": "Operation X",
