--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1655,6 +1655,7 @@
     "wizard-plugins": "A plugin adds functionality. Select the plugins you want to activate immediately, or you can do it later from the control panel.",
     "work-events": "Working events",
     "working-hours": "Work schedule",
+    "works": "Works",
     "write-a-message-here": "Write a message here",
     "x-column": "X column",
     "x-operation": "X operation",
