--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1655,6 +1655,7 @@
     "wizard-plugins": "Plugin bat funtzionalitate berriak gehitzen dituen osagarri bat da. Aukeratu berehala aktibatu nahi dituzun pluginak edo egin ezazu beranduago kontrol paneletik.",
     "work-events": "Lan ekitaldiak",
     "working-hours": "Lan orduak",
+    "works": "Lanak",
     "write-a-message-here": "Idatzi mezu bat hemen",
     "x-column": "X zutabea",
     "x-operation": "X-n eragiketa",
