--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1655,6 +1655,7 @@
     "wizard-plugins": "Un module ajoute des fonctionnalités. Sélectionnez les modules que vous souhaitez activer immédiatement. Vous pourrez toujours le faire ultérieurement via le Panneau d'administration.",
     "work-events": "Événements de travail",
     "working-hours": "Heures de travail",
+    "works": "Emplois",
     "write-a-message-here": "Écrire un message ici",
     "x-column": "Colonne X",
     "x-operation": "Opération sur X",
