--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1655,6 +1655,7 @@
     "wizard-plugins": "Un plugin é un complemento que engade novas funcionalidades. Selecciona os plugins que queras activar de inmediato, ou faino máis tarde dende o panel de control.",
     "work-events": "Eventos de traballo",
     "working-hours": "Horario de traballo",
+    "works": "Traballos",
     "write-a-message-here": "Escribe unha mensaxe aquí",
     "x-column": "Columna X",
     "x-operation": "Operación sobre X",
