--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -410,7 +410,7 @@
     "default-to-user-email": "Per impostazione predefinita, l'e-mail dell'utente",
     "default-warehouse": "default-warehouse",
     "delete": "rimuovere",
-    "delete-all": "delete-all",
+    "delete-all": "Elimina tutto",
     "delete-closing": "elimina-la-chiusura",
     "delete-data": "Delete data",
     "delete-file": "elimina-file",
@@ -707,7 +707,7 @@
     "group-by-year-unixtime": "raggruppa-per-anno-unixtime",
     "group-more-docs-p": "group-more-docs-p",
     "group-name": "Nome del Gruppo",
-    "group-or-split": "Group or split",
+    "group-or-split": "Agruppare o dividere",
     "group-or-split-p": "Questo assistente consente di generare un nuovo documento dalle righe di altri. Seleziona le quantità che desideri utilizzare, la data del nuovo documento e premi il pulsante generare.",
     "grouping-type": "Agrupación",
     "groups": "gruppi",
@@ -723,7 +723,7 @@
     "help": "aiutare",
     "help-button-p": "Consulta la ayuda en cada pantalla",
     "help-server-accepts-filesize": "Questo server supporta una dimensione massima di %1$s MB. Se il plugin prende il sopravvento, si sarà in grado di caricare, anche non si può lasciare nulla.",
-    "hide": "hide",
+    "hide": "Nascondi",
     "high": "Alto",
     "high-purchase-price": "Prezzo più alto",
     "hint-create-accounting-entry": "Create the accounting entry for the regularization of the taxes of the period",
@@ -772,7 +772,7 @@
     "international-identifier": "Identificatore internazionale",
     "intra-community": "Intra-comunitaria",
     "invalid-alphanumeric-code": "Il codice inserito (%value%) non è valido. (%column%) deve contenere tra %min% e %max% numeri o lettere, senza spazi, accenti o altri caratteri.",
-    "invalid-column-lenght": "%column% must have between %min% and %max% characters.",
+    "invalid-column-lenght": "%column% deve contenere tra %min% e %max% caratteri.",
     "invalid-date": "Data% 1 $ s non è valida.",
     "invalid-date-there-are-invoices-after": "Data non valida: %date%. La fattura %other% è successiva eppure ha data precedente: %other-date%. Ogni fattura deve avere data precedente o uguale a quella successiva.",
     "invalid-date-there-are-invoices-before": "invalid-date-there-are-invoices-before",
@@ -827,7 +827,7 @@
     "languages-ca_ES": "languages-ca_ES",
     "languages-cs_CZ": "Ceco",
     "languages-de_DE": "languages-de_DE",
-    "languages-en_EN": "languages-en_EN",
+    "languages-en_EN": "Inglese",
     "languages-es_AR": "Español (Argentina)",
     "languages-es_CL": "languages-es_CL",
     "languages-es_CO": "Spagnolo (Colombia)",
@@ -952,7 +952,7 @@
     "method-payment": "Metodo di pagamento",
     "mime-type": "Mime Type",
     "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
-    "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
+    "minimum-amount-without-cifnif": "Importo minimo senza CIF\/NIF",
     "minimum-stock": "Scorta minima",
     "minutes": "Minuti",
     "mismatched-accounting-entry": "Mismatched registrazione contabile",
@@ -1068,7 +1068,7 @@
     "opening-acounting-completed": "opening-acounting-completed",
     "opening-operation": "Apertura",
     "operation": "Operazione",
-    "operator": "Operador",
+    "operator": "Operatore",
     "option": "opzione",
     "optional": "facoltativo",
     "options": "opzioni",
@@ -1242,7 +1242,7 @@
     "receipt-expense-account": "receipt-expense-account",
     "receipts": "ricevute",
     "record-deleted-correctly": "Record cancellato correttamente!",
-    "record-deleted-error": "record-deleted-error",
+    "record-deleted-error": "Errore nell'eliminare il record",
     "record-not-found": "record-not-found",
     "record-save-error": "An error occurred while saving the record",
     "record-updated-correctly": "Registro aggiornato correttamente!",
@@ -1265,7 +1265,7 @@
     "register-installation-p": "register-installation-p",
     "register-symbol": "#",
     "registered-installation": "Installazione registrata #%number%",
-    "registered-installation-p": "registered-installation-p",
+    "registered-installation-p": "Questa installazione è già stata registrata. Se hai plugin a pagamento, premi il pulsante di gestione per collegarli e poterli aggiornare.",
     "regularization-operation": "Operazione di regolarizzazione",
     "reject": "Rechazar",
     "rejected": "rifiutato",
@@ -1307,7 +1307,7 @@
     "review-date": "Data della recensione",
     "right": "Destra",
     "risky-customer": "cliente a rischio",
-    "rol": "Rol",
+    "rol": "Ruolo",
     "role": "Ruolo",
     "roles": "ruoli",
     "rules": "Regole",
@@ -1445,7 +1445,7 @@
     "subaccounts": "sottoconti",
     "subfamilies": "Sottocategoria",
     "subject": "Oggetto",
-    "subtotal": "subtotal",
+    "subtotal": "Subtotale",
     "subtract": "Sottrarre",
     "success": "successo",
     "sum": "Suma",
@@ -1465,7 +1465,7 @@
     "supplier-estimation": "Stima fornitore",
     "supplier-estimations": "Supplier estimations",
     "supplier-have-no-iban": "Il fornitore %supplier% non ha IBAN (conto bancario)",
-    "supplier-invoice": "Supplier invoice",
+    "supplier-invoice": "Fattura del Fornitore",
     "supplier-invoice-deleted-successfully": "La fattura di acquisto 0 è stata cancellata correttamente.",
     "supplier-invoices": "Fatture Fornitori",
     "supplier-not-found": "Fornitore non trovato",
@@ -1538,7 +1538,7 @@
     "total-amount": "somma totale",
     "total-cost": "total-cost",
     "total-purchases": "Acquisti totali",
-    "total-sales": "total-sales",
+    "total-sales": "Vendite totali",
     "total-value-error": "Quantità totale di 0 1 non corretta (2). Importo corretto: 3",
     "total-with-taxes": "Total with taxes",
     "totalirpf-value-error": "Quantità totale IRPF pari a 0 1 non corretta (2). Importo corretto: 3",
@@ -1593,7 +1593,7 @@
     "uploaded-at": "Caricato alle",
     "url": "Sito web",
     "use-gaps": "usa spazi vuoti",
-    "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
+    "use-holes-invoices-esp": "Se deselezioni l'uso degli spazi nelle fatture e ne elimini una, rimarrà lo spazio nella fatturazione e avrai problemi con l'Agenzia delle Entrate",
     "user": "utente",
     "user-and-config": "Utente e configurazione",
     "users": "utenti",
@@ -1608,7 +1608,7 @@
     "value-x": "valore X",
     "value-y": "Valore Y",
     "values": "valori",
-    "variables": "Variables",
+    "variables": "Variabili",
     "variant": "Variante",
     "variants": "Varianti",
     "vat": "IVA",
@@ -1655,6 +1655,7 @@
     "wizard-plugins": "wizard-plugins",
     "work-events": "Eventi di lavoro",
     "working-hours": "Ore lavorative",
+    "works": "Lavori",
     "write-a-message-here": "Scrivi un messaggio qui",
     "x-column": "Colonna X",
     "x-operation": "Operazione X",
