--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -505,7 +505,7 @@
     "email-not-sent": "No enviado",
     "email-notification": "Notificación por email",
     "email-notification-disabled": "Powiadomienie e-mail %name% jest wyłączone",
-    "email-notification-not-exists": "Notificación de email %name% no encontrada",
+    "email-notification-not-exists": "Nie znaleziono powiadomienia e-mail %name%",
     "email-replies": "Odpowiedzi e-mail",
     "email-replies-to": "Las respuestas a este email irán a %email%",
     "email-sent": "Email enviado",
@@ -1655,6 +1655,7 @@
     "wizard-plugins": "Un plugin es un complemento que añade nuevas funcionalidades. Selecciona los plugins que quieras activar inmediatamente, o hazlo más tarde desde el panel de control.",
     "work-events": "Wydarzenia pracy",
     "working-hours": "Horario de trabajo",
+    "works": "Trabajos",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "Kolumna X",
     "x-operation": "Operación sobre X",
