--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -189,7 +189,7 @@
     "cant-change-agent-in-settlement": "No se puede cambiar el agente en el asentamiento",
     "cant-connect-database": "Não foi possível conectar ao banco de dados!",
     "cant-convert-to-innodb": "Não é possível converter a tabela '0' para InnoDB. Impresscindible para FacturaScripts.",
-    "cant-create-customer-subaccount": "Não é possível criar subconta do cliente",
+    "cant-create-customer-subaccount": "Impossível criar a subconta para o cliente %customerCode%",
     "cant-create-folder": "Não é possível criar uma pasta.",
     "cant-create-subaccount-supplier": "Não é possível criar a subconta do provedor",
     "cant-delete-audit-log": "No se puede eliminar el registro de auditoría",
@@ -199,7 +199,7 @@
     "cant-delete-default-payment-method": "cant-delete-default-payment-method",
     "cant-delete-default-serie": "Não é possível eliminar a Série por defeito",
     "cant-delete-default-tax": "cant-delete-default-tax",
-    "cant-delete-default-warehouse": "cant-delete-default-warehouse",
+    "cant-delete-default-warehouse": "Não é possível excluir o armazém padrão",
     "cant-delete-last-user": "No se puede eliminar el último usuario",
     "cant-delete-variant-with-documents": "Não é possível excluir o produto ou variante %reference% porque já foi comprado ou vendido. Mas você pode bloqueá-lo se desejar.",
     "cant-load-controller": "Não é possível carregar o controlador '%controllerName%'.",
@@ -265,7 +265,7 @@
     "color-warning": "Cor de aviso",
     "colors": "cores",
     "column": "Coluna",
-    "columns": "Columns",
+    "columns": "Colunas",
     "combination-code": "Código de combinação",
     "combinations": "Combinações",
     "commercial-terms": "Termos comerciais",
@@ -342,7 +342,7 @@
     "currency": "Moeda",
     "currency-position": "Currency position",
     "current-quarter": "Trimestre actual",
-    "current-risk": "current-risk",
+    "current-risk": "Risco atual",
     "customer": "Cliente",
     "customer-account-not-found": "customer-account-not-found",
     "customer-banking-accounts": "Contas bancárias",
@@ -650,7 +650,7 @@
     "formula-to-apply": "Fórmula para candidatar-se",
     "fourth-quarter": "4º trimestre",
     "fourth-trimester": "Quarto Trimestre",
-    "free": "free",
+    "free": "Grátis",
     "friday": "sexta-feira",
     "from": "Desde",
     "from-accounting-entry": "from-accounting-entry",
@@ -765,7 +765,7 @@
     "installed-plugins": "Instalados",
     "installer": "Instalador do FacturaScripts 2018 (Alpha)",
     "installer-p": "Bem-vindo ao instalador do FacturaScripts. Preencha os campos necessários para se conectar ao banco de dados.",
-    "installer-requirements": "As seguintes extensões e funções são necessárias para FacturaScripts:",
+    "installer-requirements": "Os seguintes requisitos do instalador são necessários no FacturaScripts:",
     "integrity-check": "Integrity check",
     "integrity-check-help": "This is a check of system integrity, described as",
     "interest": "Interés",
@@ -788,7 +788,7 @@
     "invoice-has-no-receipts": "A fatura não tem recibos. Crie um na aba de recibos.",
     "invoice-have-rectifying-cant-delete": "A fatura já possui uma retificação. Não pode ser excluída.",
     "invoice-new-assigned-date": "Já existem faturas com data superior a (%oldDate%). Nova data atribuída: %newDate%",
-    "invoice-number": "Número da factura",
+    "invoice-number": "Número da fatura",
     "invoice-receipts-diff": "Há uma diferença (%diff%) entre o valor da fatura e a soma de seus recibos.",
     "invoice-regularized-cant-change-date": "A fatura está dentro de uma regularização de 0. A data não pode ser modificada.",
     "invoice-regularized-cant-delete": "A fatura está dentro de uma regularização de 0. Ele não pode ser excluído.",
@@ -941,7 +941,7 @@
     "memcache-clear": "Memcache foi limpo.",
     "memcache-delete-key-item": "Elemento excluído '0' do Memcache.",
     "memcache-get-key-item": "Obtém o elemento '0' do Memcache.",
-    "memcache-host": "Host Memcache",
+    "memcache-host": "Servidor Memcache",
     "memcache-port": "Porta do Memcache",
     "memcache-prefix": "Prefixo Memcache",
     "memcache-set-key-item": "Elemento configurado '0' para Memcache.",
@@ -1060,7 +1060,7 @@
     "only-insert": "somente-inserir",
     "only-owner-data": "Mostrar apenas os registos do usuário",
     "only-pending": "Só pendentes",
-    "only-suspended": "only-suspended",
+    "only-suspended": "Somente suspensos",
     "open": "Abrir",
     "open-exercise": "Abrir exercício",
     "open-tab": "Abrir numa nova aba",
@@ -1481,7 +1481,7 @@
     "surcharge": "Sobretaxa",
     "surname": "Sobrenome",
     "suspended": "Suspenso",
-    "swift": "Rápido",
+    "swift": "Rápido\/BIC",
     "symbol": "Símbolo",
     "table": "table",
     "table-checked": "Tabela 0 verificada.",
@@ -1581,7 +1581,7 @@
     "unpaid": "unpaid",
     "until-accounting-entry": "Até entrada contábil",
     "until-date": "until-date",
-    "until-subaccount": "until-subaccount",
+    "until-subaccount": "até a subconta",
     "update": "update",
     "update-stock": "Atualizar estoque",
     "update-supplier-prices": "Atualizar preços dos fornecedores",
@@ -1655,6 +1655,7 @@
     "wizard-plugins": "O assistente de plugins",
     "work-events": "Eventos de trabalho",
     "working-hours": "Horário de trabalho",
+    "works": "Trabajos",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "x-column",
     "x-operation": "Operação sobre X",
