--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1655,6 +1655,7 @@
     "wizard-plugins": "O assistente de plugins",
     "work-events": "Eventos de trabalho",
     "working-hours": "Horario de trabajo",
+    "works": "Trabajos",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "x-column",
     "x-operation": "Operação sobre X",
