--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -858,7 +858,7 @@
     "last-purchase-price": "Últim preu de compra",
     "last-quarter": "El quatrimestre passat",
     "last-semester": "El semestre passat",
-    "last-trimester": "El trimestre passat",
+    "last-trimester": "El darrer trimestre",
     "last-update": "Última modificació",
     "last-user": "Últim usuari",
     "last-week": "La semana passada",
@@ -1655,6 +1655,7 @@
     "wizard-plugins": "Un plugin és un complement que afig noves funcionalitats. Selecciona els plugins que vulgues activar immediatament, o fes-ho més tard des del panell de control.",
     "work-events": "Eventos de trabajo",
     "working-hours": "Horari de treball",
+    "works": "Trabajos",
     "write-a-message-here": "Escriu un missatge ací",
     "x-column": "Columna X",
     "x-operation": "Operació sobre X",
