--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1655,6 +1655,7 @@
     "wizard-plugins": "Un plugin es un complemento que añade nuevas funcionalidades. Selecciona los plugins que quieras activar inmediatamente, o hazlo más tarde desde el panel de control.",
     "work-events": "Pracovní události",
     "working-hours": "Pracovní hodiny",
+    "works": "Trabajos",
     "write-a-message-here": "Napište zprávu zde",
     "x-column": "Columna X",
     "x-operation": "Operación sobre X",
