--- a/Core/Translation/es_GT.json
+++ b/Core/Translation/es_GT.json
@@ -1655,6 +1655,7 @@
     "wizard-plugins": "Un plugin es un complemento que añade nuevas funcionalidades. Selecciona los plugins que quieras activar inmediatamente, o hazlo más tarde desde el panel de control.",
     "work-events": "Eventos de trabajo",
     "working-hours": "Horario de trabajo",
+    "works": "Trabajos",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "Columna X",
     "x-operation": "Operación sobre X",
